# vite-test

./: .gitignore  Cargo.toml  LICENSE  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  typed-router.d.ts  vite.config.ts
src/: App.vue  commands.rs  main.rs  main.ts  s3_sync.rs  utils.rs
src/commands/: push.rs
src/components/: AppLayout.vue
src/pages/: file-hash.vue  index.vue
src/utils/: mime.rs
