[package]
name = "s3-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
aws-config = { version = "1.8.6", features = [
  "behavior-version-latest",
  "rustls"
] }
aws-credential-types = "1.2.6"
aws-sdk-s3 = "1.106.0"
tokio = { version = "1.47", features = ["full"] }
md5 = "0.8.0"
dotenvy = "0.15"
anyhow = "1.0"
mime_guess = "2.0"
